<resources>
    <string name="app_name">App</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome "</string>
    <string name="invalid_email">Not a valid email</string>
    <string name="invalid_password">Password must be more than 6 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_title">Login</string>
    <string name="login_text">Please sign in to continue</string>
    <string name="register_text">Don\'t have an account? <font color='#4c6999'>Sign up</font></string>
    <string name="prompt_username">Username</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="register_title">Register</string>
    <string name="action_sign_up">Sign up</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="genre_title">Select your genre:</string>
    <string name="birthdate">Pick your date of birth</string>
    <string name="datepicker">datePicker</string>
    <string name="invalid_user">Username can not be empty</string>
    <string name="invalid_genre">Genre can not be empty</string>
    <string name="invalid_date">Please pick your birth date</string>
    <string name="title_recipe">Recipe</string>
    <string name="title_shopping">Shopping list</string>
    <string name="title_pantry">Pantry</string>
    <string name="title_account">Account</string>
    <string name="title_menu">Menu</string>
    <string name="title_activity_main_user">MainActivityUser</string>
    <string name="details_account">Details account</string>
    <string name="account_information">Account information</string>
    <string name="prompt_genre">Genre</string>
    <string name="prompt_date">Birth date</string>
    <string name="save_changes">Save changes</string>
    <string name="delete_your_account">Delete your account</string>
    <string name="title_admin">Manage users</string>
    <string name="title_activity_main_admin">MainActivityAdmin</string>
    <string name="icon_account">Icon account</string>
    <string name="delete_account">Delete account</string>
    <string name="account_delete">Your account has been delete</string>
    <string name="prompt_search_food">Search for food in your pantry</string>
    <string name="add_food">Add food</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_amount">Amount</string>
    <string name="action_add_food">Add</string>
    <string name="add_food_title">Pantry</string>
    <string name="food_text">Add food to your pantry</string>
    <string name="title_activity_add_food">Add food</string>
    <string name="details_food">Details food</string>
    <string name="icon_food">food\'s icon</string>
    <string name="icon_recipe">recipe\'s icon</string>
    <string name="information_food">Food information</string>
    <string name="prompt_foodname">Name: </string>
    <string name="save_your_food">Save food info</string>
    <string name="title_activity_add_recipe">Add recipe</string>
    <string name="details_recipe">Details recipe</string>
    <string name="icon_reicpe">recipe\'s icon</string>
    <string name="information_recipe">Recipe information</string>
    <string name="prompt_recipename">Name: </string>
    <string name="prompt_amount_">Amount: </string>
    <string name="save_your_recipe">Save recipe info</string>
    <string name="action_add_recipe">Add</string>
    <string name="add_recipe_title">Recipes</string>
    <string name="recipe_text">Create a new recipe</string>
    <string name="prompt_search_recipe">Search a recipe</string>
    <string name="add_recipe">Add recipe</string>
    <string name="prompt_description">Description:</string>
    <string name="type_private">Private</string>
    <string name="type_public">Public</string>
    <string name="upload_an_image">Upload an image</string>
    <string name="addimage">addImage</string>
    <string name="binimage">binImage</string>
    <string name="pair_amount">Amount</string>
    <string name="pair_ingredient">Ingredient</string>
    <string name="title_pair">Add ingredients and their amount to the recipe</string>
    <string name="removeimage">removeImage</string>
    <string name="list_ingredients">List of ingredients of the recipe</string>
    <string name="change_image">Click here to change the image</string>
    <string name="prompt_search_item">Search for an item in your shopping list</string>
    <string name="add_item">Add item</string>
    <string name="action_add_item">Add item</string>
    <string name="add_item_title">Shopping list</string>
    <string name="item_text">Add item to shopping list</string>
    <string name="details_item">Details item</string>
    <string name="icon_item">item\'s icon</string>
    <string name="information_item">Item information</string>
    <string name="prompt_itemname">Name:</string>
    <string name="save_your_item">Save item info</string>
    <string name="title_activity_add_item">Add item</string>
    <string name="description_shopping">Check the items you have purchased</string>
    <string name="buy">Buy</string>
    <string name="title_activity_spending">SpendingActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="daily">Daily</string>
    <string name="monthly">Monthly</string>
    <string name="yearly">Yearly</string>
    <string name="Menu">MENU</string>
    <string name="History">HISTORY</string>
    <string name="register_failed">Error while creating your account</string>
    <string name="check_as_done">Check as done!</string>
</resources>