<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_recipe"
        android:icon="@drawable/ic_recipe"
        android:title="@string/title_recipe" />
    <item
        android:id="@+id/navigation_shopping"
        android:icon="@drawable/ic_shopping"
        android:title="@string/title_shopping" />
    <item
        android:id="@+id/navigation_menu"
        android:icon="@drawable/ic_menu"
        android:title="@string/title_menu" />

    <item
        android:id="@+id/navigation_pantry"
        android:icon="@drawable/ic_pantry"
        android:title="@string/title_pantry" />

    <item
        android:id="@+id/navigation_account"
        android:icon="@drawable/ic_user"
        android:title="@string/title_account" />

</menu>