<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation_user"
    app:startDestination="@+id/navigation_menu">

    <fragment
        android:id="@+id/navigation_recipe"
        android:name="com.example.app.ui.recipe.RecipeFragment"
        android:label="@string/title_recipe"
        tools:layout="@layout/fragment_recipe" />

    <fragment
        android:id="@+id/navigation_shopping"
        android:name="com.example.app.ui.shopping.ShoppingFragment"
        android:label="@string/title_shopping"
        tools:layout="@layout/fragment_shopping" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.example.app.ui.menu.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_pantry"
        android:name="com.example.app.ui.pantry.PantryFragment"
        android:label="@string/title_pantry"
        tools:layout="@layout/fragment_pantry" />

    <fragment
        android:id="@+id/navigation_account"
        android:name="com.example.app.ui.account.AccountFragment"
        android:label="@string/title_account"
        tools:layout="@layout/fragment_account" />

</navigation>