<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/name_recipe_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_recipe_subtitle"
        app:startIconDrawable="@drawable/ic_recipe">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editNameRecipe"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calistoga"
            android:hint="@string/prompt_name"
            android:inputType="text"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/primary_blue"
            android:textColorHint="@color/hint"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/description_layout"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.531"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name_recipe_layout"
        app:startIconDrawable="@drawable/ic_description">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/calistoga"
            android:hint="@string/prompt_description"
            android:inputType="text"
            android:minHeight="48dp"
            android:selectAllOnFocus="true"
            android:textColor="@color/primary_blue"
            android:textColorHint="@color/hint"
            android:textStyle="bold"
            tools:ignore="TextContrastCheck,TextContrastCheck,TextContrastCheck" />
    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/add"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:enabled="false"
        android:fontFamily="@font/calistoga"
        android:text="@string/action_add_recipe"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/upload" />

    <TextView
        android:id="@+id/add_title"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="4dp"
        android:fontFamily="@font/calistoga"
        android:text="@string/add_recipe_title"
        android:textSize="60sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/add_recipe_subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/calistoga"
        android:text="@string/recipe_text"
        android:textColor="@color/grey_text"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_title" />


    <TextView
        android:id="@+id/title_pair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="10dp"
        android:text="@string/title_pair"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/description_layout" />

    <ListView
        android:id="@+id/listview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animationCache="false"
        android:scrollingCache="false"
        android:smoothScrollbar="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title_pair">
    </ListView>

    <androidx.cardview.widget.CardView
        android:id="@+id/add_pair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:elevation="12dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toStartOf="@+id/remove_pair"
        app:layout_constraintTop_toBottomOf="@+id/listview">

        <ImageView
            android:id="@+id/imageadd"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/primary_blue"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/addimage"
            android:src="@drawable/ic_add" />

    </androidx.cardview.widget.CardView>
    <androidx.cardview.widget.CardView
        android:id="@+id/remove_pair"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="5dp"
        android:elevation="12dp"
        android:innerRadius="0dp"
        android:shape="ring"
        android:thicknessRatio="1.9"
        app:cardCornerRadius="40dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listview">

        <ImageView
            android:id="@+id/imageremove"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:background="@color/primary_blue"
            android:backgroundTint="@color/white"
            android:contentDescription="@string/removeimage"
            android:src="@drawable/ic_remove" />

    </androidx.cardview.widget.CardView>

    <RadioGroup
        android:id="@+id/radio_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_pair">

        <RadioButton
            android:id="@+id/radio_private"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:fontFamily="@font/calistoga"
            android:text="@string/type_private"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/radio_public"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:buttonTint="@color/grey_text"
            android:fontFamily="@font/calistoga"
            android:text="@string/type_public" />

    </RadioGroup>

    <Button
        android:id="@+id/upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/upload_an_image"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio_type" />

</androidx.constraintlayout.widget.ConstraintLayout>
