<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <RadioButton
            android:id="@+id/day"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:checked="true"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingTop="3dp"
            android:paddingRight="16dp"
            android:paddingBottom="3dp"
            android:text="@string/daily"
            android:textColor="@drawable/radio_flat_text_selector" />

        <RadioButton
            android:id="@+id/month"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingTop="3dp"
            android:paddingRight="16dp"
            android:paddingBottom="3dp"
            android:text="@string/monthly"
            android:textColor="@drawable/radio_flat_text_selector" />

        <RadioButton
            android:id="@+id/year"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:background="@drawable/radio_flat_selector"
            android:button="@android:color/transparent"
            android:gravity="center"
            android:paddingLeft="16dp"
            android:paddingTop="3dp"
            android:paddingRight="16dp"
            android:paddingBottom="3dp"
            android:text="@string/yearly"
            android:textColor="@drawable/radio_flat_text_selector" />

    </RadioGroup>

    <com.github.mikephil.charting.charts.BarChart
        android:id="@+id/idBarChart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp" />

</LinearLayout>